--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "Telegrammo",
   "version": "1.0.0",
   "description": "Telegrammo",
-  "main": "app.js",
+  "main": "telegrammo.js",
   "dependencies": {
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
